--- a/styles/components/beliefs.css
+++ b/styles/components/beliefs.css
@@ -37,7 +37,7 @@
 
 .beliefs__list {
   font-size: var(--size-xs);
-  color: var(--clr-slate600);
+  color: var(--clr-slate500);
   max-width: 75ch;
 }
 
