--- a/styles/components/contact.css
+++ b/styles/components/contact.css
@@ -15,7 +15,7 @@
 
 .contact__description {
   font-size: var(--size-sm);
-  color: var(--clr-slate600);
+  color: var(--clr-slate500);
   max-width: 60ch;
 }
 
