--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -15,7 +15,7 @@
 }
 
 .hero__subtitle {
-  color: var(--clr-slate800);
+  color: var(--clr-slate700);
   font-size: var(--size-base);
   line-height: 0.9;
 }
@@ -31,7 +31,7 @@
 .hero__description {
   max-width: 60ch;
   font-size: var(--size-sm);
-  color: var(--clr-slate600);
+  color: var(--clr-slate500);
 }
 
 .hero__btn {
