--- a/styles/components/work.css
+++ b/styles/components/work.css
@@ -10,7 +10,7 @@
 .work__description {
   max-width: 60ch;
   font-size: var(--size-sm);
-  color: var(--clr-slate600);
+  color: var(--clr-slate500);
   margin: 1rem auto;
 }
 
@@ -45,7 +45,7 @@
 
 .work__project-description1 {
   font-size: var(--size-sm);
-  color: var(--clr-slate600);
+  color: var(--clr-slate500);
   margin: 1rem 0;
 }
 
